# rust-snake-game

./: .gitignore  Cargo.toml  collections.md  ownership.md  package-lock.json  package.json  readme.md  structs.md
RustLangBook/: collections.md  errorHandling.md  generic.md  lifetimes.md  macros.md  ownership.md  structs.md  traits.md
pkg/: package.json  snake_game.d.ts  snake_game.js  snake_game_bg.wasm  snake_game_bg.wasm.d.ts
pkg/snippets/snake_game-027f5cd2d64d2885/www/utils/: rnd.js
server/: index.js
src/: lib.rs
www/: bootstrap.js  index.ts  package-lock.json  webpack.config.js
www/public/: bootstrap.js  index.html  index_ts.bootstrap.js
