[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen="0.2.63"
wee_alloc="0.4.5"

[lib]
# if you want to integrate your rust code with javascript we use cdylib
crate-type=["cdylib"]

